--- a/app/views/lessons/_form.html.erb
+++ b/app/views/lessons/_form.html.erb
@@ -4,8 +4,8 @@
   <%= f.text_field :name %>
   <%= f.label :number, 'Lesson number' %>
   <%= f.text_field :number %>
-  <%= f.label :content, "Content (use HTML)" %>
-  <%= f.text_area :content %>
+  <%= f.label :body, "Body (use HTML)" %>
+  <%= f.text_area :body %>
   <%= f.label :section %>
   <%= f.select :section_id, options_from_collection_for_select(sections, :id, :name, @lesson.section_id) %>
   <%= f.label(:public, :class => "checkbox") do %>
